Safari TOC spacing bug

--- a/_assets/css/components/_list.scss
+++ b/_assets/css/components/_list.scss
@@ -1,4 +1,6 @@
 .list {
+  padding-left: 0;
+
   li {
     display: flex;
     margin-bottom: $gap-medium;
