--- a/_assets/css/utils/_typography.scss
+++ b/_assets/css/utils/_typography.scss
@@ -109,7 +109,7 @@ h5 { font-size: $font-size-h5; }
 h6 { font-size: $font-size-h6; }
 
 ul, ol {
-  padding-left: 2em;
+  padding-left: 1.5em;
 
   li::marker {
     color: var(--secondary-text-color);
